5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1785_1600.log
== TEST (2019-05-30 10:43:00) 
-- CODE:
from numpy import*

vet = array(eval(input("valor do produto":)))

-- ERROR:
File "XXXX", line 3
    vet = array(eval(input("valor do produto":)))
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:43:34) 
-- CODE:
from numpy import*

vet = array(eval(input("valor do produto":)))

print(round(custo total,2))
-- ERROR:
File "XXXX", line 3
    vet = array(eval(input("valor do produto":)))
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
